fast_api finish

--- a/fastapi_web/.env
+++ b/fastapi_web/.env
@@ -1,9 +1,4 @@
 # .env
-# mysql pw
-
 MYSQL_ROOT_PASSWORD = 1234
 MYSQL_DATABASE = blog_db
-
-# 형식
-# mysql+mysqlconnector://<사용자이름>:<비밀번호>@<mysql서비스 이름>:<포트>/<데이터베이스이름>
-DATABASE_URL = mysql+mysqlconnector://root:${MYSQL_ROOT_PASSWORD}@db:3306/${MYSQL_DATABASE}
+DATABASE_URL = mysql+asyncmy://root:${MYSQL_ROOT_PASSWORD}@db:3306/${MYSQL_DATABASE}
