--- a/fastapi_web/requirements.txt
+++ b/fastapi_web/requirements.txt
@@ -1,8 +1,10 @@
 # requirements.txt
-fastapi
-uvicorn[standard]
-sqlmodel
-mysqlclient
-python-dotenv
-pydantic
-pydantic-settings
+fastapi==0.115.14
+sqlmodel==0.0.24
+sqlalchemy[asyncio]
+asyncmy
+python-dotenv==1.1.1
+uvicorn==0.35.0
+cryptography
+jinja2==3.1.4
+watchfiles
