--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,28 @@
+# =========================
 # Python
+# =========================
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
 
+# 가상환경
+venv/
+.env
+.env.*
+
+# Coverage/test
+.coverage
+htmlcov/
+*.cover
+*.py,cover
+
+# Jupyter
+.ipynb_checkpoints
+
+# =========================
 # VSCode
+# =========================
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -14,7 +32,9 @@ __pycache__/
 .history/
 .ionide
 
+# =========================
 # Database
+# =========================
 *.accdb
 *.db
 *.dbf
@@ -24,34 +44,53 @@ __pycache__/
 *.db-shm
 *.db-wal
 
-# dotenv
-.env
-
+# =========================
 # Redis
+# =========================
 *.rdb
 
+# =========================
 # macOS
+# =========================
 .DS_Store
 
+# =========================
 # Docker
+# =========================
 *.pid
 *.log
 
-# Coverage/test
-.coverage
-htmlcov/
-*.cover
-*.py,cover
-
-# Node
+# =========================
+# Node (혹시 프론트 쓸 경우)
+# =========================
 node_modules/
 build/
 dist/
 
-# Jupyter
-.ipynb_checkpoints
+# =========================
+# Java (Spring Boot)
+# =========================
+# 빌드 산출물
+/target/
+/build/
 
+# Gradle / Maven
+.gradle/
+/mvnw
+/mvnw.cmd
+/.mvn/
+
+# IDE
+/.idea/
+/*.iml
+
+# 로그
+*.out
+*.log
+
+# =========================
 # 임시/캐시/기타
+# =========================
 *.swp
 *.tmp
 logs/
